--- a/package.json
+++ b/package.json
@@ -12,30 +12,13 @@
   "dependencies": {
     "angular": "1.5.2",
     "angular-cookies": "1.5.2",
-    "angular-file-saver": "1.1.0",
-    "angular-filter": "0.5.8",
-    "angular-jwt": "0.0.9",
     "angular-messages": "1.5.2",
     "angular-resource": "1.5.2",
+    "angular-route": "1.5.2",
     "angular-sanitize": "1.5.2",
-    "angular-scroll": "1.0.0",
-    "angular-translate": "2.11.0",
-    "angular-translate-interpolation-messageformat": "2.11.0",
-    "angular-translate-loader-static-files": "2.11.0",
-    "angular-tree-control": "0.2.21",
-    "angular-ui-bootstrap": "0.14.3",
-    "angular-ui-router": "0.2.15",
-    "angular-ui-sortable": "0.13.4",
-    "angular-uuid": "0.0.2",
     "bootstrap": "3.3.6",
     "bootstrap-sass": "3.3.6",
-    "bootstrap-slider": "6.0.3",
-    "highcharts-release": "4.1.8",
-    "jquery": "2.1.4",
-    "jquery-ui": "1.10.5",
-    "messageformat": "0.3.1",
-    "ng-idle": "1.1.0",
-    "ui-select": "0.16.1"
+    "jquery": "2.1.4"
   },
   "devDependencies": {
     "angular-mocks": "1.5.2",
